Remove edit_code management
